Update and rename 2021-11-19-tag5-md to 2021-11-19-tag5.md

--- a/_posts/2021-11-19-tag5.md
+++ b/_posts/2021-11-19-tag5.md
@@ -2,9 +2,7 @@
 title: Tag 5 - Repository-Software für Publikationen und Forschungsdaten und DSpace
 date: 2021-11-19
 ---
-
-Es gibt einige Unterschiede zwischen Bibliotheks- und Archivsystemen. Nebst den genannten im Unterricht konnte ich noch folgende im Netz ausfindig machen:
-- 
+Liebes Lerntagebuch,
 Danach wurde ein neues Thema eingeleitet: Repository-Software für Publikationen und Forschungsdaten.
 Nach einer allgemeinen Einführung in die Thematik open access und open data, lernten wir die freie Software "DSpace" näher kennen. DSpace ermöglicht das Anlegen von Repositories, 
 in welchen Dokumente abgelegt werden und geteilt werden können. 
@@ -23,25 +21,19 @@ Man hat folgende Lizenztypen zu Auswahl:
 - Public Domain
 - CC0
 - Creative Commons
-- No Creative Commons Lizenz
 
 Ehrlich gesagt, hatte ich mich nie wirklich mit der Thematik zu Lizenztypen ausseinander gesetzt, weshalb ich nach dem Unterricht noch kurz dazu recherchierte, da ich dieses 
 Thema spannend fand und ich schlichtweg den Unterschied zwischen den verschiedenen Lizenzen nicht genau erklären konnte:
-*Public Domain*:
 
-*CC0*: Die Freigabe „Creative Commons Zero“ (CC0) macht es möglich, Inhalte so weiterzuverwenden, als wären sie bereits frei von Urheberrechten. 
-CC0-Inhalte können ohne Nachfrage zu beliebigen Zwecken kopiert, veröffentlicht oder auf andere Weise verwendet werden. Anders als die regulären Creative-Commons-Lizenzen
-enthält CC0 keine weitere Bedingungen wie etwa eine Namensnennung.(2)
+*Public Domain*: Werke/Dateien welche *nicht* urheberrechtlich geschützt sind. Der Autor/Inhaber verzichtet vollständig auf die Rechte. (1)
 
 *Creative Commons*: Der Autor/Inhaber des Werkes/Datei bestimmt ob es es frei verwendet, geändert werden oder auch für kommerzielle Nutzung verwendet werden darf.
-Achtung: Der Inhaber muss dabei aber immer mit angegeben werden! (3)
+Achtung: Der Inhaber muss dabei aber immer mit angegeben werden! (2)
 
-*No Creative Commons Lizenz*:
+*CC0*: Werke können ohne Nachfrage zu beliebigen verwendet, geändert werden oder auch für kommerzielle Nutzung verwendet werden. Der Inhaber muss nicht mit angegeben werden.
+enthält CC0 keine weitere Bedingungen wie etwa eine Namensnennung.(1)
 
 Nach dem Hochladen der Datei waren wir mit der praktischen Umsetzung fertig und der Unterricht wurde mit einem Marküberblick von Repository Softwares abgeschlossen.
 
-
-(1)
+(1) https://www.seo-analyse.com/seo-lexikon/p/public-domain/
 (2) https://irights.info/artikel/was-ist-cc0/28750
-(3) https://www.seo-analyse.com/seo-lexikon/p/public-domain/
-(4)
