--- a/_posts/2021-12-3-tag7.md
+++ b/_posts/2021-12-3-tag7.md
@@ -1,3 +1,8 @@
+---
+title: Tag 6 - Daten mit OpenRefine bereinigen
+date: 2021-05-12
+---
+
 Im heutigen Block lernten wir das Programm "OpenRefine" kennen. OpenRefine basiert auf Java und ist eignet sich dafür um grössere Mengen an Daten einfach zu bereinigen
 und anzupassen. Ähnlich wie man es von Excel kennt, kann man in OpenRefine Daten Filtern, Werte ändern, sortieren, schnelle Korrektur vornehmen, und und und... 
 (Komme gleich mit ein paar Beispielen darauf zurück)
